// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/BrowsertimeTable default 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <BrowsertimeTable
      className=""
      jobs={
        Array [
          Object {
            "insights": Object {
              "browsertime": undefined,
            },
            "internalBuildNumber": 2,
            "label": "Job #2",
            "meta": Object {
              "browsertime": undefined,
            },
            "metrics": Object {
              "browsertime": Object {
                "backEndTime": Object {
                  "value": 274,
                },
                "domContentLoadedTime": Object {
                  "value": 811,
                },
                "domInteractiveTime": Object {
                  "value": 811,
                },
                "domainLookupTime": Object {
                  "value": 3,
                },
                "firstContentfulPaint": Object {
                  "value": 317,
                },
                "firstPaint": Object {
                  "value": 317,
                },
                "firstVisualChange": Object {
                  "value": 1200,
                },
                "frontEndTime": Object {
                  "value": 413,
                },
                "fullyLoaded": Object {
                  "value": 2695,
                },
                "lastVisualChange": Object {
                  "value": 2933,
                },
                "pageDownloadTime": Object {
                  "value": 98,
                },
                "pageLoadTime": Object {
                  "value": 819,
                },
                "perceptualSpeedIndex": Object {
                  "value": 1433,
                },
                "redirectionTime": Object {
                  "value": 2,
                },
                "rumSpeedIndex": Object {
                  "value": 471,
                },
                "serverConnectionTime": Object {
                  "value": 108,
                },
                "serverResponseTime": Object {
                  "value": 257,
                },
                "speedIndex": Object {
                  "value": 1388,
                },
                "visualComplete85": Object {
                  "value": 1800,
                },
                "visualComplete95": Object {
                  "value": 1900,
                },
                "visualComplete99": Object {
                  "value": 2800,
                },
              },
            },
            "rawData": Object {
              "browsertime": Object {
                "info": Object {
                  "browsertime": Object {
                    "version": "5.7.3",
                  },
                  "timestamp": "2018-02-28T18:43:38+00:00",
                  "url": "https://mobile.twitter.com/sitespeedio",
                },
                "statistics": Object {
                  "timings": Object {
                    "firstPaint": Object {
                      "median": 317,
                    },
                    "fullyLoaded": Object {
                      "median": 2695,
                    },
                    "pageTimings": Object {
                      "backEndTime": Object {
                        "median": 274,
                      },
                      "domContentLoadedTime": Object {
                        "median": 811,
                      },
                      "domInteractiveTime": Object {
                        "median": 811,
                      },
                      "domainLookupTime": Object {
                        "median": 3,
                      },
                      "frontEndTime": Object {
                        "median": 413,
                      },
                      "pageDownloadTime": Object {
                        "median": 98,
                      },
                      "pageLoadTime": Object {
                        "median": 819,
                      },
                      "redirectionTime": Object {
                        "median": 2,
                      },
                      "serverConnectionTime": Object {
                        "median": 108,
                      },
                      "serverResponseTime": Object {
                        "median": 257,
                      },
                    },
                    "paintTiming": Object {
                      "first-contentful-paint": Object {
                        "median": 317,
                      },
                    },
                    "rumSpeedIndex": Object {
                      "median": 471,
                    },
                  },
                  "visualMetrics": Object {
                    "FirstVisualChange": Object {
                      "median": 1200,
                    },
                    "LastVisualChange": Object {
                      "median": 2933,
                    },
                    "PerceptualSpeedIndex": Object {
                      "median": 1433,
                    },
                    "SpeedIndex": Object {
                      "median": 1388,
                    },
                    "VisualComplete85": Object {
                      "median": 1800,
                    },
                    "VisualComplete95": Object {
                      "median": 1900,
                    },
                    "VisualComplete99": Object {
                      "median": 2800,
                    },
                  },
                },
              },
            },
            "summary": Object {
              "browsertime": Object {
                "rumSpeedIndex": Object {
                  "baseline": 471,
                  "current": 471,
                },
              },
            },
          },
          Object {
            "insights": Object {
              "browsertime": undefined,
            },
            "internalBuildNumber": 1,
            "label": "Job #1",
            "meta": Object {
              "browsertime": undefined,
            },
            "metrics": Object {
              "browsertime": Object {
                "backEndTime": Object {
                  "value": 274,
                },
                "domContentLoadedTime": Object {
                  "value": 811,
                },
                "domInteractiveTime": Object {
                  "value": 811,
                },
                "domainLookupTime": Object {
                  "value": 3,
                },
                "firstContentfulPaint": Object {
                  "value": 317,
                },
                "firstPaint": Object {
                  "value": 317,
                },
                "firstVisualChange": Object {
                  "value": 1200,
                },
                "frontEndTime": Object {
                  "value": 413,
                },
                "fullyLoaded": Object {
                  "value": 2695,
                },
                "lastVisualChange": Object {
                  "value": 2933,
                },
                "pageDownloadTime": Object {
                  "value": 98,
                },
                "pageLoadTime": Object {
                  "value": 819,
                },
                "perceptualSpeedIndex": Object {
                  "value": 1433,
                },
                "redirectionTime": Object {
                  "value": 2,
                },
                "rumSpeedIndex": Object {
                  "value": 471,
                },
                "serverConnectionTime": Object {
                  "value": 108,
                },
                "serverResponseTime": Object {
                  "value": 257,
                },
                "speedIndex": Object {
                  "value": 1388,
                },
                "visualComplete85": Object {
                  "value": 1800,
                },
                "visualComplete95": Object {
                  "value": 1900,
                },
                "visualComplete99": Object {
                  "value": 2800,
                },
              },
            },
            "rawData": Object {
              "browsertime": Object {
                "info": Object {
                  "browsertime": Object {
                    "version": "5.7.3",
                  },
                  "timestamp": "2018-02-28T18:43:38+00:00",
                  "url": "https://mobile.twitter.com/sitespeedio",
                },
                "statistics": Object {
                  "timings": Object {
                    "firstPaint": Object {
                      "median": 317,
                    },
                    "fullyLoaded": Object {
                      "median": 2695,
                    },
                    "pageTimings": Object {
                      "backEndTime": Object {
                        "median": 274,
                      },
                      "domContentLoadedTime": Object {
                        "median": 811,
                      },
                      "domInteractiveTime": Object {
                        "median": 811,
                      },
                      "domainLookupTime": Object {
                        "median": 3,
                      },
                      "frontEndTime": Object {
                        "median": 413,
                      },
                      "pageDownloadTime": Object {
                        "median": 98,
                      },
                      "pageLoadTime": Object {
                        "median": 819,
                      },
                      "redirectionTime": Object {
                        "median": 2,
                      },
                      "serverConnectionTime": Object {
                        "median": 108,
                      },
                      "serverResponseTime": Object {
                        "median": 257,
                      },
                    },
                    "paintTiming": Object {
                      "first-contentful-paint": Object {
                        "median": 317,
                      },
                    },
                    "rumSpeedIndex": Object {
                      "median": 471,
                    },
                  },
                  "visualMetrics": Object {
                    "FirstVisualChange": Object {
                      "median": 1200,
                    },
                    "LastVisualChange": Object {
                      "median": 2933,
                    },
                    "PerceptualSpeedIndex": Object {
                      "median": 1433,
                    },
                    "SpeedIndex": Object {
                      "median": 1388,
                    },
                    "VisualComplete85": Object {
                      "median": 1800,
                    },
                    "VisualComplete95": Object {
                      "median": 1900,
                    },
                    "VisualComplete99": Object {
                      "median": 2800,
                    },
                  },
                },
              },
            },
            "summary": Object {
              "browsertime": Object {
                "rumSpeedIndex": Object {
                  "baseline": 0,
                  "current": 471,
                },
              },
            },
          },
        ]
      }
    />
  </div>
</Router>
`;

exports[`Storyshots Components/BrowsertimeTable no baseline 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <BrowsertimeTable
      className=""
      jobs={
        Array [
          Object {
            "insights": Object {
              "browsertime": undefined,
            },
            "internalBuildNumber": 1,
            "label": "Job #1",
            "meta": Object {
              "browsertime": undefined,
            },
            "metrics": Object {
              "browsertime": Object {
                "backEndTime": Object {
                  "value": 274,
                },
                "domContentLoadedTime": Object {
                  "value": 811,
                },
                "domInteractiveTime": Object {
                  "value": 811,
                },
                "domainLookupTime": Object {
                  "value": 3,
                },
                "firstContentfulPaint": Object {
                  "value": 317,
                },
                "firstPaint": Object {
                  "value": 317,
                },
                "firstVisualChange": Object {
                  "value": 1200,
                },
                "frontEndTime": Object {
                  "value": 413,
                },
                "fullyLoaded": Object {
                  "value": 2695,
                },
                "lastVisualChange": Object {
                  "value": 2933,
                },
                "pageDownloadTime": Object {
                  "value": 98,
                },
                "pageLoadTime": Object {
                  "value": 819,
                },
                "perceptualSpeedIndex": Object {
                  "value": 1433,
                },
                "redirectionTime": Object {
                  "value": 2,
                },
                "rumSpeedIndex": Object {
                  "value": 471,
                },
                "serverConnectionTime": Object {
                  "value": 108,
                },
                "serverResponseTime": Object {
                  "value": 257,
                },
                "speedIndex": Object {
                  "value": 1388,
                },
                "visualComplete85": Object {
                  "value": 1800,
                },
                "visualComplete95": Object {
                  "value": 1900,
                },
                "visualComplete99": Object {
                  "value": 2800,
                },
              },
            },
            "rawData": Object {
              "browsertime": Object {
                "info": Object {
                  "browsertime": Object {
                    "version": "5.7.3",
                  },
                  "timestamp": "2018-02-28T18:43:38+00:00",
                  "url": "https://mobile.twitter.com/sitespeedio",
                },
                "statistics": Object {
                  "timings": Object {
                    "firstPaint": Object {
                      "median": 317,
                    },
                    "fullyLoaded": Object {
                      "median": 2695,
                    },
                    "pageTimings": Object {
                      "backEndTime": Object {
                        "median": 274,
                      },
                      "domContentLoadedTime": Object {
                        "median": 811,
                      },
                      "domInteractiveTime": Object {
                        "median": 811,
                      },
                      "domainLookupTime": Object {
                        "median": 3,
                      },
                      "frontEndTime": Object {
                        "median": 413,
                      },
                      "pageDownloadTime": Object {
                        "median": 98,
                      },
                      "pageLoadTime": Object {
                        "median": 819,
                      },
                      "redirectionTime": Object {
                        "median": 2,
                      },
                      "serverConnectionTime": Object {
                        "median": 108,
                      },
                      "serverResponseTime": Object {
                        "median": 257,
                      },
                    },
                    "paintTiming": Object {
                      "first-contentful-paint": Object {
                        "median": 317,
                      },
                    },
                    "rumSpeedIndex": Object {
                      "median": 471,
                    },
                  },
                  "visualMetrics": Object {
                    "FirstVisualChange": Object {
                      "median": 1200,
                    },
                    "LastVisualChange": Object {
                      "median": 2933,
                    },
                    "PerceptualSpeedIndex": Object {
                      "median": 1433,
                    },
                    "SpeedIndex": Object {
                      "median": 1388,
                    },
                    "VisualComplete85": Object {
                      "median": 1800,
                    },
                    "VisualComplete95": Object {
                      "median": 1900,
                    },
                    "VisualComplete99": Object {
                      "median": 2800,
                    },
                  },
                },
              },
            },
            "summary": Object {
              "browsertime": Object {
                "rumSpeedIndex": Object {
                  "baseline": 0,
                  "current": 471,
                },
              },
            },
          },
        ]
      }
    />
  </div>
</Router>
`;
